28th July Changes on WhatsApp

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -974,6 +974,7 @@ header {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    min-height: 20px;
 }
 
 .owl-carousel.expert .owl-nav button.owl-prev {
