--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4300,7 +4300,7 @@ li.details-hospital-ic::before {
 
 .primary-table tbody tr td {
     border-right: 1px solid #d0d0d0;
-    border-bottom: 0px;
+    border-bottom: 1px solid #d0d0d0;
     font-size: 15px;
     padding: 10px 15px;
 }
